[MODIFY] refactor to jdk 8 & add bad parameters handling